# supreme-doodle

./: .gitignore  .gitmodules  README.md
bootstrapc/: .gitignore  CMakeLists.txt  main.cpp
bootstrapc/ast/: CMakeLists.txt  main.cpp
bootstrapc/ast/include/: ast.h  astcontext.h
bootstrapc/ast/lib/: ast.cpp  astprinter.cpp
bootstrapc/grammar/: LangParser.g4
bootstrapc/parser/: CMakeLists.txt
bootstrapc/parser/grammar/: LangLexer.g4  LangParser.g4
bootstrapc/parser/include/: parser.h
bootstrapc/parser/lib/: parser.cpp
bootstrapc/test/: .lit_test_times.txt  func.lang  func.test.lang  imports.lang  imports.test.lang  linkedlist.lang  lit.cfg.py  package.lang  package.test.lang  sample.txt  trait.lang  trait.test.lang
bootstrapc/test/Output/: imports.test.lang.script  package.test.lang.script
bootstrapc/test/generic/: functions.lang  loop.lang  vars.lang
bootstrapc/test/literal/: basic_literal.lang
bootstrapc/test/parser/func/: func-header.rx
bootstrapc/test/parser/program/: assign.rx  simple_main_return.rx
bootstrapc/test/parser/struct/: struct.rx
bootstrapc/test/parser/trait/: trait.rx
bootstrapc/test/parser/var/: var.rx
compiler/: .clangd  .gitignore  CMakeLists.txt  driver.cpp  frontend.cpp  parse-tree.cpp  rx-frontend.cpp  test.cpp
compiler/Package/: CMakeLists.txt
compiler/Package/include/: Package.h
compiler/Package/lib/: Package.cpp
compiler/ast/: CMakeLists.txt  main.cpp
compiler/ast/include/: AST.h  ASTContext.h  ASTPrinter.h  ASTVisitor.h  SrcManager.h
compiler/ast/lib/: AST.cpp  ASTPrinter.cpp  SrcManager.cpp
compiler/include/rxc/AST/: AST.h  ASTContext.h  ASTVisitor.h  QualType.h  SrcManager.h  Type.h  TypeContext.h
compiler/include/rxc/Basic/: Diagnostic.h  SourceManager.h
compiler/include/rxc/Frontend/: TranslationUnit.h  TranslationUnitContext.h
compiler/include/rxc/Parser/: Parser.h
compiler/include/rxc/Sema/: Diagnostic.h  LexicalContext.h  LexicalScope.h  RecursiveASTVisitor.h  Sema.h
compiler/include/rxc/Types/: TypeSystem.h
compiler/lib/: CMakeLists.txt
compiler/lib/AST/: AST.cpp  ASTPrinter.cpp  CMakeLists.txt  QualType.cpp  SrcManager.cpp  Type.cpp  TypeContext.cpp
compiler/lib/Basic/: CMakeLists.txt  Diagnostic.cpp  SourceManager.cpp
compiler/lib/Frontend/: CMakeLists.txt  TranslationUnit.cpp  TranslationUnitContext.cpp
compiler/lib/Package/: CMakeLists.txt  Package.cpp
compiler/lib/Parser/: CMakeLists.txt  ParseTreeVisitor.h  Parser.cpp  ParserError.cpp  ParserErrorListener.cpp  ParserErrorListener.h
compiler/lib/Parser/grammar/: LangLexer.g4  LangParser.g4
compiler/lib/Sema/: CMakeLists.txt  ForwardDeclareFunctions.cpp  ForwardDeclarePass.cpp  LexicalScope.cpp  LexicalScope.h  MainSemaPass.cpp  ResolveGlobalTypePass.cpp  Sema.cpp  TypeCheck.cpp
compiler/lib/Types/: CMakeLists.txt  TypeSystem.cpp
compiler/parser/: CMakeLists.txt
compiler/parser/grammar/: LangLexer.g4  LangParser.g4
compiler/parser/include/: parser.h
compiler/parser/include/Parser/: Parser.h
compiler/parser/include/parser/: parser.h
compiler/parser/lib/: ParseTreeVisitor.h  Parser.cpp  ParserError.cpp  ParserErrorListener.h  parser.cpp
compiler/parser/unittests/: test_example.cpp
compiler/passes/: CMakeLists.txt  HeapMapPass.cpp
compiler/passes/test/: linked.ll
compiler/test/: lit.cfg.py
compiler/test/AST/: ImplDecl.rx  ImportDecl.rx  ResolveGlobalType.rx  TypeDecl-Enum.rx  UseDecl.rx  basic-types.rx  test.rx
compiler/test/ParseTree/: basic-type.rx  func-header.rx  impl.rx  point.rx  simple-assign.rx  simple-call.rx  simple-literal-2.rx  simple-literal.rx  simple-main.rx  simple-test-func.rx  simple-trait.rx  simple-var.rx  trait-inherit.rx  use.rx
compiler/test/Sema/: OverloadError.rx  Rectangle.rx  Rectangle2.rx  Redeclare.rx  ResolveGlobalType.rx  ResolveLiteralType.rx  ResolveUseDecl.rx  TranslationUnitDependenceGraph.dot  test.rx
compiler/test/Sema/TypeCheck/: Assignment.rx  TranslationUnitDependenceGraph.dot
compiler/test/Types/: enum.rx  rules.rx  unsupported.rx
compiler/test/parser/func/: func-header.rx
compiler/test/parser/literal/: literal.rx
compiler/test/parser/program/: assign.rx  call.rx  for.rx  if.rx  let-decl.rx  literal.rx  simple-main-return.rx  test.rx
compiler/test/parser/struct/: struct.rx
compiler/test/parser/trait/: trait.rx
compiler/test/parser/type/: basic.rx
compiler/types/: CMakeLists.txt
compiler/types/include/: TypeSystem.h
compiler/types/lib/: TypeSystem.cpp
compiler/unittest/: CMakeLists.txt  TypesTest.cpp
not supported/program/: test.rx
runtime/: .gitignore  CMakeLists.txt  add.ll  add.opt.ll  list.ll  main.ll  main.opt.ll  runtime.cpp  simple-stackroot.ll  test-opt.ll  test-opt.s  test.cpp  test.ll  test.sh
stdlib/io/: file.rx  pkg.json  print.rx
stdlib/io/src/: print.rx
